--- a/src/main/resources/com/fitj/components/headers/header-coach.fxml
+++ b/src/main/resources/com/fitj/components/headers/header-coach.fxml
@@ -18,6 +18,11 @@
         <Button fx:id="monEspace" layoutX="601.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToMonEspace" prefHeight="25.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="MON ESPACE" textFill="WHITE" />
         <Button fx:id="shop" layoutX="731.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToShop" prefHeight="25.0" prefWidth="63.0" style="-fx-background-color: #054371;" text="SHOP" textFill="WHITE" />
         <Button fx:id="mesClients" layoutX="473.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToMesClients" prefHeight="25.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="MES CLIENTS" textFill="WHITE" />
-      <Text fx:id="errorText" fill="RED" layoutX="137.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="287.2275390625" />
+      <Text fx:id="errorText" fill="RED" layoutX="145.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="287.2275390625" />
+      <ImageView fx:id="notifIcon" fitHeight="32.0" fitWidth="36.0" layoutX="79.0" layoutY="12.0" onMouseClicked="#goToNotification" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../img/notifications_icon.png" />
+         </image>
+      </ImageView>
     </children>
 </Pane>
