--- a/src/main/resources/com/fitj/views/programmes/programmesNutritions/detail-programmeNutrition.fxml
+++ b/src/main/resources/com/fitj/views/programmes/programmesNutritions/detail-programmeNutrition.fxml
@@ -48,6 +48,11 @@
                 <fx:include source="../../../components/headers/header-coach.fxml" />
             </children>
         </VBox>
+        <VBox fx:id="headerClient" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
+            <children>
+                <fx:include source="../../../components/headers/header-client.fxml" />
+            </children>
+        </VBox>
         <Text fx:id="errorText" fill="RED" layoutX="139.0" layoutY="191.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="725.0" />
         <Button fx:id="updateProgrammeNutritionButton" layoutX="394.0" layoutY="694.0" mnemonicParsing="false" onAction="#updateProgrammeNutrition" prefHeight="43.0" prefWidth="114.0" styleClass="buttonBlue" text="Modifier" />
         <Button fx:id="deleteProgrammeNutritionButton" layoutX="509.0" layoutY="694.0" mnemonicParsing="false" onAction="#deleteProgrammeNutrition" prefHeight="43.0" prefWidth="114.0" styleClass="buttonBlue" text="Supprimer" />
