--- a/src/main/resources/com/fitj/views/recettes/detail-recette.fxml
+++ b/src/main/resources/com/fitj/views/recettes/detail-recette.fxml
@@ -40,6 +40,11 @@
                 <fx:include source="../../components/headers/header-coach.fxml" />
             </children>
         </VBox>
+        <VBox fx:id="headerClient" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
+            <children>
+                <fx:include source="../../components/headers/header-client.fxml" />
+            </children>
+        </VBox>
         <Text fx:id="errorText" fill="RED" layoutX="139.0" layoutY="191.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="725.0" />
       <Button fx:id="deleteRecetteButton" layoutX="519.0" layoutY="721.0" mnemonicParsing="false" onAction="#deleteRecette" prefHeight="27.0" prefWidth="114.0" styleClass="buttonBlue" text="Supprimer" textFill="WHITE" />
       <Button fx:id="updateRecetteButton" layoutX="370.0" layoutY="721.0" mnemonicParsing="false" onAction="#updateRecette" prefHeight="27.0" prefWidth="114.0" styleClass="buttonBlue" text="Modifier" textFill="WHITE" />
