--- a/src/main/resources/com/fitj/components/clients/list-mesClient.fxml
+++ b/src/main/resources/com/fitj/components/clients/list-mesClient.fxml
@@ -19,7 +19,7 @@
             <Font size="30.0" />
          </font>
       </Text>
-      <Pane fx:id="detailClient" layoutX="18.0" layoutY="113.0" prefHeight="470.0" prefWidth="867.0" visible="false">
+      <Pane fx:id="detailClient" layoutX="18.0" layoutY="113.0" prefHeight="470.0" prefWidth="867.0" styleClass="emptyRectangle" visible="false">
          <children>
             <Button fx:id="seeLessButton" layoutX="835.0" layoutY="14.0" mnemonicParsing="false" onAction="#hideDetail" prefHeight="17.0" prefWidth="17.0" style="-fx-background-color: red; -fx-background-radius: 40px;" text="X" textFill="WHITE">
                <font>
