--- a/src/main/resources/com/fitj/views/admins/monCompte-admin.fxml
+++ b/src/main/resources/com/fitj/views/admins/monCompte-admin.fxml
@@ -2,32 +2,14 @@
 
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.admins.ControllerMonCompte">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.admins.ControllerAdminMonCompte">
    <children>
       <fx:include source="../../components/headers/header-admin.fxml" />
-      <Text fx:id="adminName" layoutX="379.0" layoutY="119.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MON COMPTE" textAlignment="CENTER" wrappingWidth="241.2509765625">
-         <font>
-            <Font name="System Bold" size="30.0" />
-         </font>
-      </Text>
-      <AnchorPane layoutX="36.0" layoutY="131.0" prefHeight="96.0" prefWidth="928.0" style="-fx-background-color: #e1e1e1;">
-         <children>
-            <fx:include source="../../components/monCompte/info.fxml" />
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutX="36.0" layoutY="226.0" prefHeight="534.0" prefWidth="464.0" style="-fx-background-color: #e1e1e1;">
-         <children>
-            <fx:include source="../../components/monCompte/list-sport-monCompte.fxml" />
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutX="500.0" layoutY="226.0" prefHeight="534.0" prefWidth="464.0" style="-fx-background-color: #e1e1e1;">
-         <children>
-            <fx:include source="../../components/monCompte/list-materiel-monCompte.fxml" />
-         </children>
-      </AnchorPane>
    </children>
-   +
+      <AnchorPane layoutX="50.0" layoutY="130.0" prefHeight="339.0" prefWidth="886.0" style="-fx-background-color: #e1e1e1;">
+         <children>
+            <fx:include source="../../components/monCompte/info-coach-admin.fxml" />
+         </children>
+      </AnchorPane>
 </Pane>
