--- a/src/main/resources/com/fitj/components/monCompte/info.fxml
+++ b/src/main/resources/com/fitj/components/monCompte/info.fxml
@@ -15,20 +15,22 @@
             <Font size="36.0" />
          </font>
       </Text>
-      <Button fx:id="UpdateButton" layoutX="613.0" layoutY="340.0" mnemonicParsing="false" onAction="#goToUpload" style="-fx-background-color:  #054371;" text="Mettre à jour" textFill="WHITE">
+      <Button fx:id="UpdateButton" layoutX="760.0" layoutY="331.0" mnemonicParsing="false" onAction="#goToUpdate" style="-fx-background-color:  #054371;" text="Mettre à jour" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
       </Button>
-      <Text fx:id="errorText" fill="RED" layoutX="334.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="425.9999999999999" />
-      <Text fill="#054371" layoutX="557.0" layoutY="123.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mot de passe" wrappingWidth="92.13671875" />
+      <Text fx:id="errorText" fill="RED" layoutX="334.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" wrappingWidth="425.9999999999999" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f7fbff" height="40.0" layoutX="333.0" layoutY="126.0" stroke="#054371" strokeType="INSIDE" styleClass="rectangleShape" width="206.0" />
       <Text fill="#054371" layoutX="334.0" layoutY="194.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Adresse mail" wrappingWidth="92.13671875" />
       <Text fill="#054371" layoutX="334.0" layoutY="123.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pseudo" wrappingWidth="92.13671875" />
       <Text fx:id="pseudo" fill="#054371" layoutX="339.0" layoutY="150.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pseudo" wrappingWidth="193.20001220703125" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f7fbff" height="40.0" layoutX="333.0" layoutY="197.0" stroke="#054371" strokeType="INSIDE" styleClass="rectangleShape" width="474.0" />
       <Text fx:id="mail" fill="#054371" layoutX="339.0" layoutY="221.0" strokeType="OUTSIDE" strokeWidth="0.0" text="mail" wrappingWidth="415.60003662109375" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f7fbff" height="40.0" layoutX="557.0" layoutY="126.0" stroke="#054371" strokeType="INSIDE" styleClass="rectangleShape" width="250.0" />
-      <Text fx:id="password" fill="#054371" layoutX="563.0" layoutY="149.0" strokeType="OUTSIDE" strokeWidth="0.0" text="password" wrappingWidth="193.20001220703125" />
+      <Button fx:id="UpdatePasswordButton" layoutX="491.0" layoutY="331.0" mnemonicParsing="false" onAction="#goToUpdatePassword" style="-fx-background-color:  #054371;" text="Changer de mot de passe" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Button>
    </children>
 </Pane>
