Paco merge réparé...

--- a/src/main/resources/com/fitj/components/monCompte/updatePassword.fxml
+++ b/src/main/resources/com/fitj/components/monCompte/updatePassword.fxml
@@ -6,14 +6,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane prefHeight="200.0" prefWidth="351.0" style="-fx-background-color: lightgrey; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.monCompte.ControllerMonCompteUpdatePassword">
+<Pane prefHeight="200.0" prefWidth="351.0" style="-fx-background-color: lightgrey; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.monCompte.ControllerMonCompteUpdatePassword">
    <children>
       <Text fill="#054371" layoutX="59.0" layoutY="28.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mot de passe" wrappingWidth="92.13671875" />
       <Text fill="#054371" layoutX="59.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Confirmation de mot de passe" wrappingWidth="170.5367431640625" />
       <PasswordField fx:id="password" layoutX="59.0" layoutY="32.0" prefHeight="26.0" prefWidth="234.0" styleClass="emptyRectangle" />
       <PasswordField fx:id="passwordConfirm" layoutX="59.0" layoutY="84.0" prefHeight="26.0" prefWidth="234.0" styleClass="emptyRectangle" />
       <Text fx:id="errorText" fill="RED" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="351.0" />
-      <Button fx:id="updateButton" layoutX="117.0" layoutY="149.0" mnemonicParsing="false" onAction="#update" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: red;" text="Mettre à jour" textFill="WHITE">
+      <Button fx:id="updateButton" layoutX="118.0" layoutY="156.0" mnemonicParsing="false" onAction="#update" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: red;" styleClass="buttonRed" text="Mettre à jour" textFill="WHITE">
          <font>
             <Font size="16.0" />
          </font>
