--- a/src/main/resources/com/fitj/components/monCompte/updateMonCompte.fxml
+++ b/src/main/resources/com/fitj/components/monCompte/updateMonCompte.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane prefHeight="280.0" prefWidth="351.0" style="-fx-background-color: lightgrey; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.monCompte.ControllerMonCompteUpdate">
+<Pane prefHeight="280.0" prefWidth="351.0" style="-fx-background-color: lightgrey; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.monCompte.ControllerMonCompteUpdate">
    <children>
       <TextField fx:id="mail" layoutX="59.0" layoutY="39.0" prefHeight="25.0" prefWidth="234.0" styleClass="emptyRectangle" />
       <Text fill="#054371" layoutX="59.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Adresse mail" wrappingWidth="92.13671875" />
@@ -15,7 +15,7 @@
       <TextField fx:id="image" layoutX="58.0" layoutY="145.0" prefHeight="26.0" prefWidth="234.0" styleClass="emptyRectangle" />
       <Text fill="#054371" layoutX="59.0" layoutY="141.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Lien de la photo de profil" wrappingWidth="170.5367431640625" />
       <Text fx:id="errorText" fill="RED" layoutY="200.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="351.0" />
-      <Button fx:id="updateButton" layoutX="117.0" layoutY="213.0" mnemonicParsing="false" onAction="#update" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: red;" text="Mettre à jour" textFill="WHITE">
+      <Button fx:id="updateButton" layoutX="117.0" layoutY="219.0" mnemonicParsing="false" onAction="#update" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: red;" styleClass="buttonRed" text="Mettre à jour" textFill="WHITE">
          <font>
             <Font size="16.0" />
          </font>
