usecase programme sportif finito

--- a/src/main/resources/com/fitj/views/admins/monEspace-admin.fxml
+++ b/src/main/resources/com/fitj/views/admins/monEspace-admin.fxml
@@ -29,6 +29,7 @@
                                 <content>
                                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                         <children>
+                                            <fx:include source="../../components/programmes/programmesSportifs/list-programmeSportif.fxml" />
                                         </children>
                                     </AnchorPane>
                                 </content>
