--- a/src/main/resources/com/fitj/views/coachs/monEspace-coach.fxml
+++ b/src/main/resources/com/fitj/views/coachs/monEspace-coach.fxml
@@ -34,6 +34,9 @@
                                              <Tab text="Mes programmes sportifs">
                                                 <content>
                                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                                      <children>
+                                                         <fx:include source="../../components/programmes/programmesSportifs/list-mes-programmesSportifs.fxml" />
+                                                      </children>
                                                    </AnchorPane>
                                                 </content>
                                              </Tab>
@@ -84,6 +87,9 @@
                            <Tab text="Mes programmes sportifs">
                               <content>
                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                    <children>
+                                       <fx:include source="../../components/programmes/programmesSportifs/list-mes-programmesSportifs-achat.fxml" />
+                                    </children>
                                  </AnchorPane>
                               </content>
                            </Tab>
