--- a/src/main/resources/com/fitj/components/programmes/programmesSportifs/list-mes-programmesSportifs.fxml
+++ b/src/main/resources/com/fitj/components/programmes/programmesSportifs/list-mes-programmesSportifs.fxml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<Pane prefHeight="600.0" prefWidth="900.0" scaleShape="false" stylesheets="@../../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.programmes.programmesSportifs.ControllerMesProgrammesSportifsList">
+<Pane prefHeight="600.0" prefWidth="900.0" scaleShape="false" stylesheets="@../../../styles/style.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.programmes.programmesSportifs.ControllerMesProgrammesSportifsList">
     <children>
-        <Button fx:id="addProgrammeNutritionButton" layoutX="453.0" layoutY="464.0" mnemonicParsing="false" onAction="#goToAddProgrammeNutrition" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Ajouter" textFill="WHITE" />
-        <ListView fx:id="listView" layoutX="17.0" layoutY="25.0" onMouseClicked="#selectItem" prefHeight="405.0" prefWidth="867.0" styleClass="emptyRectangle" />
-        <Button fx:id="updateProgrammeNutritionButton" layoutX="322.0" layoutY="464.0" mnemonicParsing="false" onAction="#goToUpdateProgrammeNutrition" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Modifier" textFill="WHITE" />
-        <Button fx:id="deleteProgrammeNutritionButton" layoutX="584.0" layoutY="464.0" mnemonicParsing="false" onAction="#deleteProgrammeNutrition" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Supprimer" textFill="WHITE" />
-        <Text fx:id="errorText" fill="RED" layoutX="129.0" layoutY="455.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Message" textAlignment="CENTER" wrappingWidth="642.0" />
-        <Button fx:id="detailProgrammeNutritionButton" layoutX="207.0" layoutY="464.0" mnemonicParsing="false" onAction="#goToDetailProgrammeNutrition" styleClass="buttonBlue" text="Voir" />
+        <Button fx:id="addProgrammeSportifButton" layoutX="457.0" layoutY="463.0" mnemonicParsing="false" onAction="#goToAddProgrammeSportif" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Ajouter" textFill="WHITE" />
+        <ListView fx:id="listView" layoutX="17.0" layoutY="25.0" onMouseClicked="#selectItem" prefHeight="368.0" prefWidth="867.0" styleClass="emptyRectangle" />
+        <Button fx:id="updateProgrammeSportifButton" layoutX="322.0" layoutY="463.0" mnemonicParsing="false" onAction="#goToUpdateProgrammeSportif" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Modifier" textFill="WHITE" />
+        <Button fx:id="deleteProgrammeSportifButton" layoutX="591.0" layoutY="463.0" mnemonicParsing="false" onAction="#deleteProgrammeSportif" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Supprimer" textFill="WHITE" />
+        <Text fx:id="errorText" fill="RED" layoutX="130.0" layoutY="445.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Message" textAlignment="CENTER" wrappingWidth="642.0" />
+        <Button fx:id="detailProgrammeSportifButton" layoutX="207.0" layoutY="463.0" mnemonicParsing="false" onAction="#goToDetailProgrammeSportif" styleClass="buttonBlue" text="Voir" />
     </children>
 </Pane>
