--- a/src/main/resources/com/fitj/views/programmes/ProgrammesSportifs/detail-programmeSportif.fxml
+++ b/src/main/resources/com/fitj/views/programmes/ProgrammesSportifs/detail-programmeSportif.fxml
@@ -1,14 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.fitj.views.programmes.ProgrammesSportifs.DetailProgrammeSportif"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" stylesheets="@../../../styles/style.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.programmes.programmesSportifs.ControllerDetailProgrammeSportif">
+    <children>
+        <Pane layoutX="139.0" layoutY="213.0" prefHeight="461.0" prefWidth="725.0" style="-fx-border-color: #054371; -fx-background-radius: 10px; -fx-border-radius: 10px; -fx-background-color: lightgrey;">
+            <children>
+                <Text fill="#054371" layoutX="143.0" layoutY="103.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Séances du programme">
+                    <font>
+                        <Font size="16.0" />
+                    </font>
+                </Text>
+                <ListView fx:id="listViewSeanceProgrammeSportif" layoutX="143.0" layoutY="108.0" onMouseClicked="#handlerViewSeance" prefHeight="170.0" prefWidth="448.0" styleClass="emptyRectangle" />
+                <Text fx:id="nomProgrammeSportif" fill="#054371" layoutX="279.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom du programme">
+                    <font>
+                        <Font size="20.0" />
+                    </font>
+                </Text>
+                <Button fx:id="detailSeanceButton" layoutX="143.0" layoutY="285.0" mnemonicParsing="false" onAction="#goToDetailSeance" prefHeight="27.0" prefWidth="92.0" styleClass="buttonBlue" text="Voir" />
+                <Text fx:id="programmeType" fill="#054371" layoutX="36.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Difficulté" />
+                <Text fill="#054371" layoutX="545.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Crée par : " />
+                <Text fx:id="nomCoach" fill="#054371" layoutX="600.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="nomCoach" wrappingWidth="84.05517578125" />
+                <TextFlow fx:id="descriptionProgramme" layoutX="141.0" layoutY="350.0" prefHeight="89.0" prefWidth="448.0" />
+                <Text fill="#054371" layoutX="108.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Durée :" />
+                <Text fx:id="nbMoisProgramme" fill="#054371" layoutX="153.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="nbMois" wrappingWidth="60.05517578125" />
+                <Text fill="#054371" layoutX="140.0" layoutY="346.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description" wrappingWidth="92.0" />
+            </children>
+        </Pane>
+        <Text fill="#054371" layoutX="289.0" layoutY="147.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Détail du programme sportif">
+            <font>
+                <Font size="34.0" />
+            </font>
+        </Text>
+        <VBox fx:id="headerAdmin" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
+            <children>
+                <fx:include source="../../../components/headers/header-admin.fxml" />
+            </children>
+        </VBox>
+        <VBox fx:id="headerCoach" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
+            <children>
+                <fx:include source="../../../components/headers/header-coach.fxml" />
+            </children>
+        </VBox>
+        <VBox fx:id="headerClient" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
+            <children>
+                <fx:include source="../../../components/headers/header-client.fxml" />
+            </children>
+        </VBox>
+        <Text fx:id="errorText" fill="RED" layoutX="139.0" layoutY="191.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="725.0" />
+        <Button fx:id="updateProgrammeSportifButton" layoutX="394.0" layoutY="694.0" mnemonicParsing="false" onAction="#updateProgrammeSportif" prefHeight="43.0" prefWidth="114.0" styleClass="buttonBlue" text="Modifier" />
+        <Button fx:id="deleteProgrammeSportifButton" layoutX="509.0" layoutY="694.0" mnemonicParsing="false" onAction="#deleteProgrammeSportif" prefHeight="43.0" prefWidth="114.0" styleClass="buttonBlue" text="Supprimer" />
+    </children>
+</Pane>
