--- a/src/main/resources/com/fitj/views/exercices/update-exercice.fxml
+++ b/src/main/resources/com/fitj/views/exercices/update-exercice.fxml
@@ -7,13 +7,13 @@
     <children>
         <VBox layoutX="1.0" prefHeight="55.0" prefWidth="1000.0">
             <children>
-                <fx:include source="../../../components/headers/header-admin.fxml" />
+                <fx:include source="../../components/headers/header-admin.fxml" />
             </children>
         </VBox>
-      <Pane layoutX="1.0" layoutY="55.0" prefHeight="746.0" prefWidth="1000.0">
-        <children>
-          <fx:include source="../../../components/exercices/create-exercice.fxml" />
-        </children>
-      </Pane>
+        <Pane layoutX="1.0" layoutY="55.0" prefHeight="746.0" prefWidth="1000.0">
+            <children>
+                <fx:include source="../../components/exercices/update-exercice.fxml" />
+            </children>
+        </Pane>
     </children>
 </Pane>
