--- a/src/main/resources/com/fitj/components/coachs/list-coach.fxml
+++ b/src/main/resources/com/fitj/components/coachs/list-coach.fxml
@@ -9,7 +9,7 @@
 <Pane prefHeight="664.0" prefWidth="900.0" scaleShape="false" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.coachs.ControllerCoachList">
    <children>
        <Button fx:id="setToAdmin" layoutX="462.0" layoutY="606.0" mnemonicParsing="false" onAction="#handleAdminPassage" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Nouvel admin" textFill="WHITE" />
-       <ListView fx:id="listView" layoutX="17.0" layoutY="95.0" prefHeight="470.0" prefWidth="867.0" styleClass="emptyRectangle" />
+       <ListView fx:id="listView" layoutX="17.0" layoutY="95.0" prefHeight="470.0" prefWidth="867.0" onMouseClicked="#selectCoach" styleClass="emptyRectangle" />
        <Text fx:id="errorText" fill="RED" layoutX="130.0" layoutY="591.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Message" textAlignment="CENTER" wrappingWidth="642.0" />
       <Button fx:id="seeMoreButton" layoutX="322.0" layoutY="606.0" mnemonicParsing="false" onAction="#handleSeeMoreButton" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Voir plus" textFill="WHITE" />
       <Text fill="#054371" layoutX="346.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Liste des coachs" textAlignment="CENTER">
