--- a/src/main/resources/com/fitj/components/monCompte/info-coach-admin.fxml
+++ b/src/main/resources/com/fitj/components/monCompte/info-coach-admin.fxml
@@ -35,6 +35,6 @@
             <Font size="20.0" />
          </font>
       </Button>
-      <Button fx:id="retirerButton" layoutX="497.0" layoutY="295.0" mnemonicParsing="false" onAction="#handleRetirerButton" styleClass="buttonBlue" text="Retirer" />
+      <Button fx:id="retirerButton" layoutX="497.0" layoutY="292.0" mnemonicParsing="false" onAction="#handleRetirerButton" styleClass="buttonRed" text="Retirer" />
    </children>
 </Pane>
