--- a/src/main/resources/com/fitj/components/programmes/programmesSportifs/list-mes-programmesSportifs-achat.fxml
+++ b/src/main/resources/com/fitj/components/programmes/programmesSportifs/list-mes-programmesSportifs-achat.fxml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Text?>
 
-<Pane prefHeight="600.0" prefWidth="900.0" scaleShape="false" stylesheets="@../../../styles/style.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.programmes.programmesSportifs.ControllerMesProgrammesSportifsAchat">
+<Pane prefHeight="600.0" prefWidth="900.0" scaleShape="false" stylesheets="@../../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.programmes.programmesSportifs.ControllerMesProgrammesSportifsAchat">
     <children>
-        <ListView fx:id="listView" layoutX="17.0" layoutY="25.0" onMouseClicked="#selectItem" prefHeight="450.0" prefWidth="867.0" styleClass="emptyRectangle" />
+        <ListView fx:id="listView" layoutX="17.0" layoutY="25.0" onMouseClicked="#selectItem" prefHeight="418.0" prefWidth="867.0" styleClass="emptyRectangle" />
         <Text fx:id="errorText" fill="RED" layoutX="128.0" layoutY="501.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Message" textAlignment="CENTER" wrappingWidth="642.0" />
-        <Button fx:id="detailProgrammeSportifButton" layoutX="205.0" layoutY="519.0" mnemonicParsing="false" onAction="#goToDetailProgrammeSportif" styleClass="buttonBlue" text="Voir" />
+        <Button fx:id="detailProgrammeSportifButton" layoutX="400.0" layoutY="482.0" mnemonicParsing="false" onAction="#goToDetailProgrammeSportif" styleClass="buttonBlue" text="Voir" />
     </children>
 </Pane>
-
