--- a/src/main/resources/com/fitj/views/produits/programmes/ProgrammesSportifs/detail-programmeSportif.fxml
+++ b/src/main/resources/com/fitj/views/produits/programmes/ProgrammesSportifs/detail-programmeSportif.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" stylesheets="@../../../styles/style.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.programmes.programmesSportifs.ControllerDetailProgrammeSportif">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" stylesheets="@../../../../styles/style.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.programmes.programmesSportifs.ControllerDetailProgrammeSportif">
     <children>
         <Pane layoutX="139.0" layoutY="213.0" prefHeight="461.0" prefWidth="725.0" style="-fx-border-color: #054371; -fx-background-radius: 10px; -fx-border-radius: 10px; -fx-background-color: lightgrey;">
             <children>
@@ -36,21 +36,22 @@
         </Text>
         <VBox fx:id="headerAdmin" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
             <children>
-                <fx:include source="../../../components/headers/header-admin.fxml" />
+                <fx:include source="../../../../components/headers/header-admin.fxml" />
             </children>
         </VBox>
         <VBox fx:id="headerCoach" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
             <children>
-                <fx:include source="../../../components/headers/header-coach.fxml" />
+                <fx:include source="../../../../components/headers/header-coach.fxml" />
             </children>
         </VBox>
         <VBox fx:id="headerClient" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
             <children>
-                <fx:include source="../../../components/headers/header-client.fxml" />
+                <fx:include source="../../../../components/headers/header-client.fxml" />
             </children>
         </VBox>
         <Text fx:id="errorText" fill="RED" layoutX="139.0" layoutY="191.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="725.0" />
-        <Button fx:id="updateProgrammeSportifButton" layoutX="394.0" layoutY="694.0" mnemonicParsing="false" onAction="#updateProgrammeSportif" prefHeight="43.0" prefWidth="114.0" styleClass="buttonBlue" text="Modifier" />
-        <Button fx:id="deleteProgrammeSportifButton" layoutX="509.0" layoutY="694.0" mnemonicParsing="false" onAction="#deleteProgrammeSportif" prefHeight="43.0" prefWidth="114.0" styleClass="buttonBlue" text="Supprimer" />
+        <Button fx:id="updateProgrammeSportifButton" layoutX="381.0" layoutY="694.0" mnemonicParsing="false" onAction="#updateProgrammeSportif" prefHeight="43.0" prefWidth="114.0" styleClass="buttonBlue" text="Modifier" />
+        <Button fx:id="deleteProgrammeSportifButton" layoutX="504.0" layoutY="694.0" mnemonicParsing="false" onAction="#deleteProgrammeSportif" prefHeight="43.0" prefWidth="114.0" styleClass="buttonBlue" text="Supprimer" />
+        <Button fx:id="buyButton" layoutX="764.0" layoutY="694.0" mnemonicParsing="false" onAction="#handleBuyButton" styleClass="buttonRed" text="Acheter" visible="false"/>
     </children>
 </Pane>
