--- a/src/main/resources/com/fitj/views/produits/programmes/ProgrammesSportifs/update-programmeSportif.fxml
+++ b/src/main/resources/com/fitj/views/produits/programmes/ProgrammesSportifs/update-programmeSportif.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" stylesheets="@../../../styles/style.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.programmes.programmesSportifs.ControllerAddProgrammeSportif">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" stylesheets="@../../../../styles/style.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.programmes.programmesSportifs.ControllerModifyProgrammeSportif">
     <children>
         <Pane layoutX="138.0" layoutY="215.0" prefHeight="495.0" prefWidth="725.0" style="-fx-border-color: #054371; -fx-background-radius: 10px; -fx-border-radius: 10px; -fx-background-color: lightgrey;">
             <children>
@@ -42,32 +42,32 @@
                 <Slider fx:id="nbMoisProgrammeSportif" layoutX="396.0" layoutY="424.0" majorTickUnit="1.0" max="12.0" min="1.0" minorTickCount="1" onMouseReleased="#updateMoisValue" prefHeight="33.0" prefWidth="271.0" showTickLabels="true" value="6.0" />
                 <Slider fx:id="prixProgrammeSportif" layoutX="396.0" layoutY="339.0" max="2000.0" onMouseReleased="#updateMontantProgramme" prefHeight="33.0" prefWidth="271.0" showTickLabels="true" />
                 <Text fx:id="montantProgramme" fill="RED" layoutX="613.0" layoutY="319.0" strokeType="OUTSIDE" strokeWidth="0.0" text="montant" textAlignment="RIGHT" wrappingWidth="77.90478515625" />
+                <Text fx:id="nbMoisValue" fill="RED" layoutX="614.0" layoutY="404.0" strokeType="OUTSIDE" strokeWidth="0.0" text="mois" textAlignment="RIGHT" wrappingWidth="77.90478515625" />
                 <Text fill="#054371" layoutX="376.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Les séances disponibles">
                     <font>
                         <Font size="16.0" />
                     </font>
                 </Text>
-                <Text fx:id="nbMoisValue" fill="RED" layoutX="614.0" layoutY="404.0" strokeType="OUTSIDE" strokeWidth="0.0" text="mois" textAlignment="RIGHT" wrappingWidth="77.90478515625" />
             </children>
         </Pane>
-        <Text fill="#054371" layoutX="227.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Créer un nouveau programme sportif">
+        <Text fill="#054371" layoutX="278.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Modifier le programme sportif">
             <font>
                 <Font size="34.0" />
             </font>
         </Text>
-        <Button fx:id="addProgrammeSportif" layoutX="408.0" layoutY="725.0" mnemonicParsing="false" onAction="#addProgrammeSportif" styleClass="buttonBlue" text="Créer le programme sportif" textFill="WHITE">
+        <Button fx:id="updateProgrammeSportifButton" layoutX="408.0" layoutY="725.0" mnemonicParsing="false" onAction="#updateProgrammeSportif" styleClass="buttonBlue" text="Modifier le programme sportif" textFill="WHITE">
             <font>
                 <Font size="16.0" />
             </font>
         </Button>
         <VBox fx:id="headerAdmin" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
             <children>
-                <fx:include source="../../../components/headers/header-admin.fxml" />
+                <fx:include source="../../../../components/headers/header-admin.fxml" />
             </children>
         </VBox>
         <VBox fx:id="headerCoach" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
             <children>
-                <fx:include source="../../../components/headers/header-coach.fxml" />
+                <fx:include source="../../../../components/headers/header-coach.fxml" />
             </children>
         </VBox>
         <Text fx:id="errorText" fill="RED" layoutX="137.0" layoutY="187.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="725.0" />
