--- a/src/main/resources/com/fitj/views/produits/programmes/programmesNutritions/detail-programmeNutrition.fxml
+++ b/src/main/resources/com/fitj/views/produits/programmes/programmesNutritions/detail-programmeNutrition.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" stylesheets="@../../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.programmes.programmesNutritions.ControllerDetailProgrammeNutrition">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" stylesheets="@../../../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.programmes.programmesNutritions.ControllerDetailProgrammeNutrition">
     <children>
         <Pane layoutX="139.0" layoutY="213.0" prefHeight="461.0" prefWidth="725.0" style="-fx-border-color: #054371; -fx-background-radius: 10px; -fx-border-radius: 10px; -fx-background-color: lightgrey;">
             <children>
@@ -40,21 +40,22 @@
         </Text>
         <VBox fx:id="headerAdmin" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
             <children>
-                <fx:include source="../../../components/headers/header-admin.fxml" />
+                <fx:include source="../../../../components/headers/header-admin.fxml" />
             </children>
         </VBox>
         <VBox fx:id="headerCoach" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
             <children>
-                <fx:include source="../../../components/headers/header-coach.fxml" />
+                <fx:include source="../../../../components/headers/header-coach.fxml" />
             </children>
         </VBox>
         <VBox fx:id="headerClient" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
             <children>
-                <fx:include source="../../../components/headers/header-client.fxml" />
+                <fx:include source="../../../../components/headers/header-client.fxml" />
             </children>
         </VBox>
         <Text fx:id="errorText" fill="RED" layoutX="139.0" layoutY="191.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="725.0" />
-        <Button fx:id="updateProgrammeNutritionButton" layoutX="394.0" layoutY="694.0" mnemonicParsing="false" onAction="#updateProgrammeNutrition" prefHeight="43.0" prefWidth="114.0" styleClass="buttonBlue" text="Modifier" />
-        <Button fx:id="deleteProgrammeNutritionButton" layoutX="509.0" layoutY="694.0" mnemonicParsing="false" onAction="#deleteProgrammeNutrition" prefHeight="43.0" prefWidth="114.0" styleClass="buttonBlue" text="Supprimer" />
+        <Button fx:id="updateProgrammeNutritionButton" layoutX="381.0" layoutY="694.0" mnemonicParsing="false" onAction="#updateProgrammeNutrition" prefHeight="43.0" prefWidth="114.0" styleClass="buttonBlue" text="Modifier" />
+        <Button fx:id="deleteProgrammeNutritionButton" layoutX="504.0" layoutY="694.0" mnemonicParsing="false" onAction="#deleteProgrammeNutrition" prefHeight="43.0" prefWidth="114.0" styleClass="buttonBlue" text="Supprimer" />
+      <Button fx:id="buyButton" layoutX="764.0" layoutY="694.0" mnemonicParsing="false" onAction="#handleBuyButton" styleClass="buttonRed" text="Acheter" visible="false"/>
     </children>
 </Pane>
