--- a/src/main/resources/com/fitj/views/produits/seances/detail-seance.fxml
+++ b/src/main/resources/com/fitj/views/produits/seances/detail-seance.fxml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.seances.ControllerDetailSeance">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" stylesheets="@../../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.seances.ControllerDetailSeance">
     <children>
         <Pane layoutX="139.0" layoutY="173.0" prefHeight="515.0" prefWidth="725.0" style="-fx-border-color: #054371; -fx-background-radius: 10px; -fx-border-radius: 10px; -fx-background-color: lightgrey;">
             <children>
@@ -32,21 +36,22 @@
         </Text>
         <VBox fx:id="headerAdmin" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
             <children>
-                <fx:include source="../../components/headers/header-admin.fxml" />
+                <fx:include source="../../../components/headers/header-admin.fxml" />
             </children>
         </VBox>
         <VBox fx:id="headerCoach" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
             <children>
-                <fx:include source="../../components/headers/header-coach.fxml" />
+                <fx:include source="../../../components/headers/header-coach.fxml" />
             </children>
         </VBox>
         <VBox fx:id="headerClient" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
             <children>
-                <fx:include source="../../components/headers/header-client.fxml" />
+                <fx:include source="../../../components/headers/header-client.fxml" />
             </children>
         </VBox>
         <Text fx:id="errorText" fill="RED" layoutX="139.0" layoutY="158.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="725.0" />
         <Button fx:id="deleteSeanceButton" layoutX="519.0" layoutY="721.0" mnemonicParsing="false" onAction="#deleteSeance" prefHeight="27.0" prefWidth="114.0" styleClass="buttonBlue" text="Supprimer" textFill="WHITE" />
         <Button fx:id="updateSeanceButton" layoutX="370.0" layoutY="721.0" mnemonicParsing="false" onAction="#updateSeance" prefHeight="27.0" prefWidth="114.0" styleClass="buttonBlue" text="Modifier" textFill="WHITE" />
+      <Button fx:id="buyButton" layoutX="764.0" layoutY="721.0" mnemonicParsing="false" onAction="#handleBuyButton" styleClass="buttonRed" text="Acheter" visible="false"/>
     </children>
 </Pane>
