--- a/src/main/resources/com/fitj/components/programmes/programmesNutritions/list-mes-programmesNutritions.fxml
+++ b/src/main/resources/com/fitj/components/programmes/programmesNutritions/list-mes-programmesNutritions.fxml
@@ -8,7 +8,7 @@
 <Pane prefHeight="600.0" prefWidth="900.0" scaleShape="false" stylesheets="@../../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.programmes.programmesNutritions.ControllerMesProgrammesNutritionsList">
     <children>
         <Button fx:id="addProgrammeNutritionButton" layoutX="453.0" layoutY="464.0" mnemonicParsing="false" onAction="#goToAddProgrammeNutrition" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Ajouter" textFill="WHITE" />
-        <ListView fx:id="listView" layoutX="17.0" layoutY="25.0" onMouseClicked="#selectItem" prefHeight="405.0" prefWidth="867.0" styleClass="emptyRectangle" />
+        <ListView fx:id="listView" layoutX="17.0" layoutY="25.0" onMouseClicked="#selectItemProgramme" prefHeight="405.0" prefWidth="867.0" styleClass="emptyRectangle" />
         <Button fx:id="updateProgrammeNutritionButton" layoutX="322.0" layoutY="464.0" mnemonicParsing="false" onAction="#goToUpdateProgrammeNutrition" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Modifier" textFill="WHITE" />
         <Button fx:id="deleteProgrammeNutritionButton" layoutX="584.0" layoutY="464.0" mnemonicParsing="false" onAction="#deleteProgrammeNutrition" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Supprimer" textFill="WHITE" />
         <Text fx:id="errorText" fill="RED" layoutX="129.0" layoutY="455.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Message" textAlignment="CENTER" wrappingWidth="642.0" />
