--- a/src/main/resources/com/fitj/components/programmes/programmesSportifs/list-mes-programmesSportifs.fxml
+++ b/src/main/resources/com/fitj/components/programmes/programmesSportifs/list-mes-programmesSportifs.fxml
@@ -7,7 +7,7 @@
 <Pane prefHeight="600.0" prefWidth="900.0" scaleShape="false" stylesheets="@../../../styles/style.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.programmes.programmesSportifs.ControllerMesProgrammesSportifsList">
     <children>
         <Button fx:id="addProgrammeSportifButton" layoutX="457.0" layoutY="463.0" mnemonicParsing="false" onAction="#goToAddProgrammeSportif" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Ajouter" textFill="WHITE" />
-        <ListView fx:id="listView" layoutX="17.0" layoutY="25.0" onMouseClicked="#selectItem" prefHeight="368.0" prefWidth="867.0" styleClass="emptyRectangle" />
+        <ListView fx:id="listView" layoutX="17.0" layoutY="25.0" onMouseClicked="#selectItemProgramme" prefHeight="368.0" prefWidth="867.0" styleClass="emptyRectangle" />
         <Button fx:id="updateProgrammeSportifButton" layoutX="322.0" layoutY="463.0" mnemonicParsing="false" onAction="#goToUpdateProgrammeSportif" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Modifier" textFill="WHITE" />
         <Button fx:id="deleteProgrammeSportifButton" layoutX="591.0" layoutY="463.0" mnemonicParsing="false" onAction="#deleteProgrammeSportif" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Supprimer" textFill="WHITE" />
         <Text fx:id="errorText" fill="RED" layoutX="130.0" layoutY="445.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Message" textAlignment="CENTER" wrappingWidth="642.0" />
