--- a/src/main/resources/com/fitj/components/seances/list-seance.fxml
+++ b/src/main/resources/com/fitj/components/seances/list-seance.fxml
@@ -8,7 +8,7 @@
 <Pane prefHeight="600.0" prefWidth="900.0" scaleShape="false" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.seances.ControllerSeanceList">
     <children>
         <Button fx:id="addSeanceButton" layoutX="455.0" layoutY="519.0" mnemonicParsing="false" onAction="#goToAddSeance" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Ajouter" textFill="WHITE" />
-        <ListView fx:id="listView" layoutX="17.0" layoutY="25.0" onMouseClicked="#selectItem" prefHeight="450.0" prefWidth="867.0" styleClass="emptyRectangle" />
+        <ListView fx:id="listView" layoutX="17.0" layoutY="25.0" onMouseClicked="#selectItemSeance" prefHeight="450.0" prefWidth="867.0" styleClass="emptyRectangle" />
         <Button fx:id="updateSeanceButton" layoutX="320.0" layoutY="519.0" mnemonicParsing="false" onAction="#goToUpdateSeance" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Modifier" textFill="WHITE" />
         <Button fx:id="deleteSeanceButton" layoutX="589.0" layoutY="519.0" mnemonicParsing="false" onAction="#deleteSeance" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Supprimer" textFill="WHITE" />
         <Text fx:id="errorText" fill="RED" layoutX="128.0" layoutY="501.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Message" textAlignment="CENTER" wrappingWidth="642.0" />
