--- a/src/main/resources/com/fitj/views/produits/seances/detail-seance.fxml
+++ b/src/main/resources/com/fitj/views/produits/seances/detail-seance.fxml
@@ -10,7 +10,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" stylesheets="@../../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.seances.ControllerDetailSeance">
     <children>
-        <Pane layoutX="139.0" layoutY="173.0" prefHeight="515.0" prefWidth="725.0" style="-fx-border-color: #054371; -fx-background-radius: 10px; -fx-border-radius: 10px; -fx-background-color: lightgrey;">
+        <Pane layoutX="131.0" layoutY="174.0" prefHeight="515.0" prefWidth="725.0" style="-fx-border-color: #054371; -fx-background-radius: 10px; -fx-border-radius: 10px; -fx-background-color: lightgrey;">
             <children>
                 <Text fill="#054371" layoutX="29.0" layoutY="128.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Exercices de la séances">
                     <font>
@@ -18,7 +18,7 @@
                     </font>
                 </Text>
                 <ListView fx:id="listViewExerciceSeance" layoutX="29.0" layoutY="133.0" prefHeight="228.0" prefWidth="334.0" styleClass="emptyRectangle" />
-                <Text fx:id="nomSeanceTxt" fill="#054371" layoutX="288.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom de la séance">
+                <Text fx:id="nomSeanceTxt" fill="#054371" layoutX="212.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom de la séance" textAlignment="CENTER" wrappingWidth="300.798828125">
                     <font>
                         <Font size="20.0" />
                     </font>
@@ -29,7 +29,7 @@
                 <Text fx:id="montantSeance" fill="RED" layoutX="344.0" layoutY="470.0" strokeType="OUTSIDE" strokeWidth="0.0" text="montant" />
             </children>
         </Pane>
-        <Text fill="#054371" layoutX="361.0" layoutY="115.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Détail de la séance">
+        <Text fill="#054371" layoutX="361.0" layoutY="119.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Détail de la séance">
             <font>
                 <Font size="34.0" />
             </font>
@@ -49,9 +49,9 @@
                 <fx:include source="../../../components/headers/header-client.fxml" />
             </children>
         </VBox>
-        <Text fx:id="errorText" fill="RED" layoutX="139.0" layoutY="158.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="725.0" />
-        <Button fx:id="deleteSeanceButton" layoutX="519.0" layoutY="721.0" mnemonicParsing="false" onAction="#deleteSeance" prefHeight="27.0" prefWidth="114.0" styleClass="buttonBlue" text="Supprimer" textFill="WHITE" />
-        <Button fx:id="updateSeanceButton" layoutX="370.0" layoutY="721.0" mnemonicParsing="false" onAction="#updateSeance" prefHeight="27.0" prefWidth="114.0" styleClass="buttonBlue" text="Modifier" textFill="WHITE" />
-      <Button fx:id="buyButton" layoutX="764.0" layoutY="721.0" mnemonicParsing="false" onAction="#handleBuyButton" styleClass="buttonRed" text="Acheter" visible="false"/>
+        <Text fx:id="errorText" fill="RED" layoutX="131.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="725.0" />
+        <Button fx:id="deleteSeanceButton" layoutX="518.0" layoutY="721.0" mnemonicParsing="false" onAction="#deleteSeance" prefHeight="27.0" prefWidth="114.0" styleClass="buttonBlue" text="Supprimer" textFill="WHITE" />
+        <Button fx:id="updateSeanceButton" layoutX="369.0" layoutY="721.0" mnemonicParsing="false" onAction="#updateSeance" prefHeight="27.0" prefWidth="114.0" styleClass="buttonBlue" text="Modifier" textFill="WHITE" />
+      <Button fx:id="buyButton" layoutX="764.0" layoutY="721.0" mnemonicParsing="false" onAction="#handleBuyButton" styleClass="buttonRed" text="Acheter" visible="false" />
     </children>
 </Pane>
