--- a/src/main/resources/com/fitj/views/shop/shop.fxml
+++ b/src/main/resources/com/fitj/views/shop/shop.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.shop.ControllerShopTabs">
@@ -25,7 +26,7 @@
                 <fx:include source="../../components/headers/header-admin.fxml" />
             </children>
         </AnchorPane>
-      <AnchorPane layoutX="74.0" layoutY="131.0" prefHeight="594.0" prefWidth="853.0">
+      <AnchorPane layoutX="74.0" layoutY="169.0" prefHeight="594.0" prefWidth="853.0">
          <children>
             <TabPane fx:id="tabs" prefHeight="594.0" prefWidth="853.0" styleClass="emptyRectangle" tabClosingPolicy="UNAVAILABLE">
               <tabs>
@@ -33,7 +34,7 @@
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <ListView fx:id="packList" layoutX="20.0" layoutY="14.0" onMouseClicked="#selectItem" prefHeight="476.0" prefWidth="813.0" />
+                              <ListView fx:id="packList" layoutX="20.0" layoutY="14.0" onMouseClicked="#selectItemList" prefHeight="476.0" prefWidth="813.0" styleClass="emptyRectangle" />
                               <Button fx:id="voirPack" layoutX="377.0" layoutY="510.0" mnemonicParsing="false" onAction="#handleVoirPack" styleClass="buttonBlue" text="Voir" />
                            </children>
                         </AnchorPane>
@@ -43,7 +44,7 @@
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <ListView fx:id="programmeNutritionList" layoutX="20.0" layoutY="14.0" onMouseClicked="#selectItem" prefHeight="476.0" prefWidth="813.0" />
+                              <ListView fx:id="programmeNutritionList" layoutX="20.0" layoutY="14.0" onMouseClicked="#selectItemList" prefHeight="476.0" prefWidth="813.0" styleClass="emptyRectangle" />
                               <Button fx:id="voirNutrition" layoutX="377.0" layoutY="510.0" mnemonicParsing="false" onAction="#handleVoirNutrition" styleClass="buttonBlue" text="Voir" />
                            </children>
                         </AnchorPane>
@@ -53,7 +54,7 @@
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <ListView fx:id="programmeSportifList" layoutX="20.0" layoutY="14.0" onMouseClicked="#selectItem" prefHeight="476.0" prefWidth="813.0" />
+                              <ListView fx:id="programmeSportifList" layoutX="20.0" layoutY="14.0" onMouseClicked="#selectItemList" prefHeight="476.0" prefWidth="813.0" styleClass="emptyRectangle" />
                               <Button fx:id="voirSportif" layoutX="377.0" layoutY="510.0" mnemonicParsing="false" onAction="#handleVoirSportif" styleClass="buttonBlue" text="Voir" />
                            </children>
                         </AnchorPane>
@@ -63,7 +64,7 @@
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <ListView fx:id="seancesList" layoutX="20.0" layoutY="14.0" onMouseClicked="#selectItem" prefHeight="476.0" prefWidth="813.0" />
+                              <ListView fx:id="seancesList" layoutX="20.0" layoutY="14.0" onMouseClicked="#selectItemList" prefHeight="476.0" prefWidth="813.0" styleClass="emptyRectangle" />
                               <Button fx:id="voirSeance" layoutX="377.0" layoutY="510.0" mnemonicParsing="false" onAction="#handleVoirSeance" styleClass="buttonBlue" text="Voir" />
                            </children>
                         </AnchorPane>
@@ -73,6 +74,11 @@
             </TabPane>
          </children>
       </AnchorPane>
-      <Text fx:id="errorText" fill="RED" layoutX="171.0" layoutY="755.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Text" textAlignment="CENTER" wrappingWidth="658.21630859375" />
+      <Text fx:id="errorText" fill="RED" layoutX="171.0" layoutY="153.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Text" textAlignment="CENTER" wrappingWidth="658.21630859375" />
+      <Text fill="#054371" layoutX="246.0" layoutY="122.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Acheter un produit dans le magasin !" textAlignment="CENTER" wrappingWidth="509.857421875">
+         <font>
+            <Font size="30.0" />
+         </font>
+      </Text>
     </children>
 </Pane>
